--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -7,7 +7,7 @@
     android:background="@color/white">
 
     <ImageView
-        android:id="@+id/iv_contactlist_profile"
+        android:id="@+id/iv_contact_list_person_profile"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="15dp"
@@ -20,7 +20,7 @@
         tool:src="@drawable/img_default_profile" />
 
     <TextView
-        android:id="@+id/tv_contactlist_name"
+        android:id="@+id/tv_contact_list_person_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -28,11 +28,11 @@
         android:text="이름"
         android:textColor="@color/black"
         android:textSize="17sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_contactlist_profile"
+        app:layout_constraintStart_toEndOf="@+id/iv_contact_list_person_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_contactlist_memo"
+        android:id="@+id/tv_contact_list_person_memo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -40,11 +40,11 @@
         android:text="어제 빌려간 돈 안주는 사람"
         android:textColor="#8A8A8A"
         android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_contactlist_profile"
-        app:layout_constraintTop_toBottomOf="@+id/tv_contactlist_name" />
+        app:layout_constraintStart_toEndOf="@+id/iv_contact_list_person_profile"
+        app:layout_constraintTop_toBottomOf="@+id/tv_contact_list_person_name" />
 
     <ImageView
-        android:id="@+id/iv_contactlist_favorite"
+        android:id="@+id/iv_contact_list_person_favorite"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginEnd="10dp"
