--- a/app/src/main/res/layout/contact_list_title.xml
+++ b/app/src/main/res/layout/contact_list_title.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/shape_my_page_gradient_background">
 
     <TextView
-        android:id="@+id/tv_listtitle"
+        android:id="@+id/tv_contact_list_department_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -20,16 +19,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_department_count"
+        android:id="@+id/tv_contact_list_department_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_marginStart="5dp"
-        app:layout_constraintTop_toTopOf="@+id/tv_listtitle"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_listtitle"
-        app:layout_constraintStart_toEndOf="@+id/tv_listtitle"
+        app:layout_constraintTop_toTopOf="@+id/tv_contact_list_department_title"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_contact_list_department_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_contact_list_department_title"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
