--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -58,7 +58,7 @@
 
     <Spinner
         android:id="@+id/spinner_add_contact"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/tv_add_contact_department"
         app:layout_constraintEnd_toEndOf="@+id/et_add_contact_email"
