--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".contactDetailFragment.ContactDetailFragment"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".contactDetailFragment.ContactDetailFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -70,6 +70,32 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_detail_email" />
+
+            <TextView
+                android:id="@+id/tv_detail_alarm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="15dp"
+                android:text="5분 후"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_alarm_tab" />
+
+            <TextView
+                android:id="@+id/tv_detail_alarm_tab"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/shape_my_page_gradient_background"
+                android:gravity="center_vertical"
+                android:paddingHorizontal="15dp"
+                android:text="알람"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_memo" />
 
             <TextView
                 android:id="@+id/tv_detail_email"
