--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#00A3FF</color>
     <color name="light_blue">#81D2FF</color>
+    <color name="red">#FF0000</color>
 </resources>
