Fix : 상세 페이지에서 알람 설정 메세지가 바로 연동되지 않는 현상 Design : 상세 페이지 아래 마진 추가

--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -232,10 +232,12 @@
                 android:id="@+id/tv_detail_alarm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:paddingHorizontal="15dp"
                 android:text="5분 후"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_detail_alarm_tab" />
