Fix : 내 정보 수정 inputType 변경 & 전화번호 유효성 검사 조건 수정

--- a/app/src/main/res/layout/dialog_edit_my_profile.xml
+++ b/app/src/main/res/layout/dialog_edit_my_profile.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="10dp"
         android:hint="이름"
         android:textSize="18sp"
+        android:inputType="text"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
