Design : grey 색 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#00A3FF</color>
     <color name="light_blue">#81D2FF</color>
     <color name="red">#FF0000</color>
+    <color name="grey">#C6C6C6</color>
 </resources>
