--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -23,6 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
+                android:textSize="18sp"
+                android:textColor="@color/white"
                 android:background="@color/red"
                 android:gravity="center"
                 android:text="삭제" />
