--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -23,11 +23,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
-                android:textSize="18sp"
-                android:textColor="@color/white"
                 android:background="@color/red"
                 android:gravity="center"
-                android:text="삭제" />
+                android:text="삭제"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:visibility="gone" />
 
 
             <LinearLayout
@@ -49,7 +50,7 @@
                 android:background="@color/white"
                 tool:ignore="MissingConstraints">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/iv_contact_list_person_profile"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
