Fix : 레이아웃 상에 그냥 문자열로 써 있던 요소들 strings.xml에 저장 Add : 검색창이 열려있을 때 뒤로가기 버튼을 누르면 검색창이 닫히는 기능

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="WorksWhale"
+            android:text="@string/app_name"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -84,15 +84,15 @@
         app:tabTextAppearance="@style/tab_text"
         app:tabTextColor="@color/white">
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="연락처" />
+<!--        <com.google.android.material.tabs.TabItem-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:text="연락처" />-->
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="마이페이지" />
+<!--        <com.google.android.material.tabs.TabItem-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:text="마이페이지" />-->
 
     </com.google.android.material.tabs.TabLayout>
 
