--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -24,7 +24,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/blue"
-        android:hint="이름"
+        android:hint="@string/edit_hint_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/blue"
-        android:hint="전화번호"
+        android:hint="@string/edit_hint_phone_number"
         android:inputType="phone"
         android:maxLength="13"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
-        android:text="부서"
+        android:text="@string/edit_hint_department"
         android:textSize="18sp"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="@+id/et_add_contact_email"
@@ -71,7 +71,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/blue"
-        android:hint="이메일"
+        android:hint="@string/edit_hint_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/blue"
-        android:hint="메모"
+        android:hint="@string/edit_hint_memo"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="5dp"
-        android:text="알람 설정"
+        android:text="@string/edit_hint_alarm_setting"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/et_add_contact_memo"
         app:layout_constraintTop_toBottomOf="@+id/et_add_contact_memo" />
@@ -217,7 +217,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/shape_my_page_background"
-        android:text="취소"
+        android:text="@string/add_contact_dialog_positive_btn"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_add_contact_add"
@@ -231,7 +231,7 @@
         android:layout_height="40dp"
         android:background="@drawable/selector_add_contact_add_btn"
         android:enabled="false"
-        android:text="저장"
+        android:text="@string/add_contact_dialog_negative_btn"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/btn_add_contact_cancel"
         app:layout_constraintEnd_toEndOf="parent"
