--- a/app/src/main/res/layout/dialog_edit_my_profile.xml
+++ b/app/src/main/res/layout/dialog_edit_my_profile.xml
@@ -27,7 +27,7 @@
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="이름"
+        android:hint="@string/edit_hint_name"
         android:textSize="18sp"
         android:inputType="text"
         android:backgroundTint="@color/blue"
@@ -41,7 +41,7 @@
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="전화번호"
+        android:hint="@string/edit_hint_phone_number"
         android:inputType="phone"
         android:textSize="18sp"
         android:backgroundTint="@color/blue"
@@ -55,7 +55,7 @@
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="이메일"
+        android:hint="@string/edit_hint_email"
         android:textSize="18sp"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/shape_my_page_background"
-        android:text="취소"
+        android:text="@string/edit_profile_dialog_negative_btn"
         android:textColor="#FFFFFF"
         android:textSize="13sp"
         android:layout_marginTop="10dp"
@@ -96,7 +96,7 @@
         android:layout_height="35dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/selector_add_contact_add_btn"
-        android:text="확인"
+        android:text="@string/edit_profile_dialog_positive_btn"
         android:textColor="#FFFFFF"
         android:textSize="13sp"
         android:layout_marginTop="10dp"
