--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -93,7 +93,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="이름"
+                android:text="@string/name_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="15dp"
-                android:text="민지"
+                tools:text="민지"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="번호"
+                android:text="@string/phone_number_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="15dp"
-                android:text="010-1234-5678"
+                tools:text="010-1234-5678"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -151,7 +151,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="부서"
+                android:text="@string/department_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -164,7 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="15dp"
-                android:text="인사부"
+                tools:text="인사부"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +179,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="이메일"
+                android:text="@string/email_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -193,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="15dp"
-                android:text="iamwhale@sea.com"
+                tools:text="iamwhale@sea.com"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +208,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="메모"
+                android:text="@string/memo_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -221,7 +221,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="15dp"
-                android:text="저번주 돈 안 갚은 팀원"
+                tools:text="저번주 돈 안 갚은 팀원"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -234,7 +234,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:paddingHorizontal="15dp"
-                android:text="5분 후"
+                tools:text="5분 후"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -249,7 +249,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="알람"
+                android:text="@string/alarm_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
