--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -32,7 +32,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="이름"
+                android:text="@string/name_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="번호"
+                android:text="@string/phone_number_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
                 android:background="@drawable/shape_my_page_gradient_background"
                 android:gravity="center_vertical"
                 android:paddingHorizontal="15dp"
-                android:text="이메일"
+                android:text="@string/email_tab"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
