--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -13,7 +13,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
         android:queryBackground="@drawable/shape_search_background"
-        android:queryHint="이름 또는 번호로 검색해주세요"
+        android:queryHint="@string/search_query_hint"
         app:iconifiedByDefault="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
