--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -12,36 +12,10 @@
         android:layout_height="80dp"
         tool:ignore="MissingConstraints">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <TextView
-                android:id="@+id/swipe_delete"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:background="@color/red"
-                android:gravity="center"
-                android:text="삭제"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:visibility="gone" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"></LinearLayout>
-
-
-        </LinearLayout>
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/item_up">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/item"
