--- a/app/src/main/res/layout/contact_list_person.xml
+++ b/app/src/main/res/layout/contact_list_person.xml
@@ -5,7 +5,7 @@
     android:id="@+id/item_list"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@color/white">
+    android:background="@color/red">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:text="삭제"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
 
             <LinearLayout
